@@ -35,13 +35,13 @@
 /*
   S-compatibility defines.
  */
-#ifndef STRICT_R_HEADERS
-#define PI             M_PI
 #ifdef __cplusplus
 #include <cfloat>   /* Defines the RHSs, C++11 and later */
 #else
 #include <float.h>  /* Defines the RHSs, C99 and later */
 #endif
+#ifndef STRICT_R_HEADERS
+#define PI             M_PI
 
 /* The DOUBLE_* defines were deprecated in R 4.2.0 and removed in 4.3.0.
 #define DOUBLE_DIGITS  DBL_MANT_DIG
